<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/detailsLayout_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="5dp">
        
        <EditText
            android:id="@+id/firstName_editText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="21sp"
            android:hint="@string/first_name"
            android:textColor="@color/colorText_Btn"
            android:inputType="text"
            android:importantForAutofill="no" />
        
        <EditText
            android:id="@+id/lastName_editText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="21sp"
            android:hint="@string/last_name"
            android:textColor="@color/colorText_Btn"
            android:inputType="text"
            android:importantForAutofill="no" />
        
        <EditText
            android:id="@+id/age_editText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="21sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/age"
            android:textColor="@color/colorText_Btn"
            android:inputType="number"
            android:importantForAutofill="no" />
        
        
    </LinearLayout>

    
    <Button
        android:id="@+id/sendToSecond_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/detailsLayout_editText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:background="@color/colorText_Btn"
        android:text="@string/send_to_second_activity"
        android:textColor="@color/colorBackground"
        android:textStyle="bold"
        android:textSize="19sp" 
        android:textAllCaps="false"/>

    <View
        android:id="@+id/viewLine_View"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintTop_toBottomOf="@id/sendToSecond_button"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorText_Btn"
        />


    <TextView
        android:id="@+id/reviewTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewLine_View"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/review"
        android:textSize="31sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/colorText_Btn"
      />

    <TextView
        android:id="@+id/review_textView"
        android:background="#d6e6f2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/reviewTitle_textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorText_Btn"
        android:textStyle="normal|italic"
        android:textSize="21sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>