<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@color/colorBackground">


    <TextView
        android:id="@+id/titleDataFromMain_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="31sp"
        android:text="@string/data_from_main_activity"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/colorText_Btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:id="@+id/setDetailsLayout_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/titleDataFromMain_textView"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/titleFirstName_textView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="21sp"
            android:gravity="start"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:textColor="@color/colorText_Btn"
            />

        <TextView
            android:id="@+id/setFirstName_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:layout_marginStart="25dp"
            android:textColor="@color/colorText_Btn"/>

    </LinearLayout>

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/titleLastName_textView"
                    android:layout_width="120dp"
                    android:gravity="start"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textSize="21sp"
                    android:layout_marginStart="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorText_Btn"/>

                <TextView
                    android:id="@+id/setLastName_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="21sp"
                    android:layout_marginStart="25dp"
                    android:textColor="@color/colorText_Btn"/>

             </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/titleAgetName_textView"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textSize="21sp"
                    android:gravity="start"
                    android:layout_marginStart="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorText_Btn"/>

                <TextView
                    android:id="@+id/setAgeName_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="21sp"
                    android:layout_marginStart="25dp"
                    android:textColor="@color/colorText_Btn"/>

             </LinearLayout>

    </LinearLayout>


    <View
        android:id="@+id/viewLine_View"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorText_Btn"
        app:layout_constraintTop_toBottomOf="@id/setDetailsLayout_linearLayout"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:id="@+id/commentTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewLine_View"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/comment"
        android:textSize="31sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/colorText_Btn"
        android:layout_marginTop="25dp"/>

    <EditText
        android:inputType="text"
        android:id="@+id/comment_editText"
        android:background="#d6e6f2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:hint="@string/comment_here"
        app:layout_constraintTop_toBottomOf="@id/commentTitle_textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorText_Btn"
        android:textStyle="normal|italic"
        android:textSize="21sp"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/sendToMain_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/comment_editText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:background="@color/colorText_Btn"
        android:text="@string/go_back_to_main_activity"
        android:textColor="@color/colorBackground"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>